--- a/src/sass/common/header.scss
+++ b/src/sass/common/header.scss
@@ -1,6 +1,5 @@
 .header {
-  position: relative;
-  z-index: 10;
+  position: sticky;
 
   padding: 1.8rem 0;
 
@@ -16,10 +15,14 @@
   }
 
   @include media-tablet-sm {
-    position: sticky;
+    position: fixed;
+
+    z-index: 10;
 
     top: 0;
     left: 0;
+
+    width: 100%;
   }
 }
 
